Changes for 1.6.5

 - [DEV-137] fixed incorrect comment for TrapperTimeout option in zabbix_server.conf (Sasha)
 - [ZBX-894] fixed processing of {ITEM.LASTVALUE} for alerts if the trigger expression consists of several items (Sasha) 
 - [ZBX-893] fixed error creating trigger when in Host dropdown selected All (Vedmak)
 - [ZBX-888] more supported GSM modems (ignoring AT+CMEE command) (Sasha)
 - [ZBX-884] fixed sudden stop of Jabber notifications (Sasha)
 - [ZBX-884] added subject field for Jabber notifications (Sasha)
 - [ZBX-460] fixed processing `distclean' target of `Makefile' for zabbix_proxy (Dmitry)
 - [ZBX-882] fixed template linkage form (Artem)
 - [ZBX-879] fixed maximum 30 issues shown in Dahsboard system status (Vedmak)
 - [ZBX-876] removed unused files (Artem)
 - [ZBX-872] fixed group selected in another section of Hosts affects shown proxy members, and proxies shown in Items host dropdown (Vedmak)
 - [ZBX-874] fixed evaluation of items nextcheck for flexible intervals (Sasha) 
 - [ZBX-868] fixed incorrect processing of not supported internal checks (Alexei)
 - [ZBX-867] added php sockets check to installation wizard (Artem)
 - [ZBX-865] fixed displaying templates without groups in tempalte linkage page (Artem)
 - [ZBX-857] changed queue details timestamp to timestamp defined in locale file (Artem)
 - [ZBX-864] fixed problem when saving screen item without selected item (Artem)
 - [ZBX-856] fixed email sending if tcp packets from smtp server are segmented (Sasha)
 - [ZBX-855] fixed processing of eventlogs timestamps on server side (Sasha)
 - [ZBX-851] changed sorting of users  to alias in popup (Artem)
 - [ZBX-849] fixed permissions problem for users in dashboard (Artem)
 - [ZBX-797] fixed possible manual deletion of web items (Vedmak)
 - [ZBX-847] fixed error in "Status of ZABBIX" when server is not running (Vedmak)
 - [ZBX-846] fixed node names instead of group names (Artem)

Changes for 1.6.4
