@@ -1,0 +1,1 @@
+CREATE INDEX services_1 on services (triggerid);
